--- a/src/app/modulos/parametros/parada/eliminar-parada/eliminar-parada.component.html
+++ b/src/app/modulos/parametros/parada/eliminar-parada/eliminar-parada.component.html
@@ -1,1 +1,31 @@
-<p>eliminar-parada works!</p>
+<fieldset class="center container">
+    <legend>Eliminar una parada</legend>
+    <div class="row">
+        <div class="row">
+            <div class="col s12">
+                <strong>¿Confirma la eliminación de estos datos?</strong>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s4">
+                Nombre: {{nombreParada}}
+            </div>
+            <div class="col s4">
+                Información: {{informacionAdicional}}
+            </div>
+            <div class="col s4">
+                Ubicación: {{ubicacionId}}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+                <a routerLink="/parametros/parada-listar" class="btn red">Cancelar</a>
+                &nbsp;
+                <button (click)="EliminarParada()" class="btn waves-effect waves-light">
+                    Eliminar
+                </button>
+            </div>
+        </div>
+    </div>
+</fieldset>
