--- a/src/app/modulos/parametros/parada/listar-parada/listar-parada.component.html
+++ b/src/app/modulos/parametros/parada/listar-parada/listar-parada.component.html
@@ -1,1 +1,30 @@
-<p>listar-parada works!</p>
+<br />
+<a routerLink="/parametros/parada-crear" class="btn">Agregar parada</a>
+<br /> 
+
+<!-- Tabla de Materialize -->
+<table class="responsive-table">
+    <thead>
+      <tr>
+        <th>Nombre</th>
+        <th>Informacion</th>
+        <th>Clave</th>
+        <th>Ubicación</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr *ngFor="let p of listaParadas">
+        <td>{{p.nombreParada}}</td>
+        <td>{{p.informacionAdicional}}</td>
+        <td>{{p.clave}}</td>
+        <td>{{p.ubicacionId}}</td>
+        <td>
+            <a routerLink="/parametros/parada-editar/{{p.id}}" class="btn orange">Editar parada</a>
+            &nbsp;
+            <a routerLink="/parametros/parada-eliminar/{{p.id}}" class="btn red">Eliminar parada</a>
+        </td>
+      </tr>
+      <!-- Agrega más filas según sea necesario -->
+    </tbody>
+  </table>
