--- a/src/app/modulos/parametros/solicitud-viaje/listar-solicitud-viaje/listar-solicitud-viaje.component.html
+++ b/src/app/modulos/parametros/solicitud-viaje/listar-solicitud-viaje/listar-solicitud-viaje.component.html
@@ -1,1 +1,3 @@
-<p>listar-solicitud-viaje works!</p>
+<br />
+<a routerLink="/parametros/solicitud-viaje-crear" class="btn">Solicitar un viaje</a>
+<br /> 
