--- a/src/app/modulos/parametros/historial-viajes/historial-viajes-listar/historial-viajes-listar.component.html
+++ b/src/app/modulos/parametros/historial-viajes/historial-viajes-listar/historial-viajes-listar.component.html
@@ -1,5 +1,5 @@
-<!-- Tabla de Materialize -->
-<table class="responsive-table">
+<body class="container">
+  <table class="responsive-table">
     <thead>
       <tr>
         <th>Viaje</th>
@@ -13,10 +13,12 @@
     <tbody>
       <tr *ngFor="let v of listaHistorialViajes">
         <td>{{v.id}}</td>
-        <td>{{v.puntoOrigenId}}</td>
-        <td>{{v.puntoDestinoId}}</td>
+        <td>{{v.puntoOrigen!.nombreParada}}</td>
+        <td>{{v.puntoDestino!.nombreParada}}</td>
         <td>{{v.costo}}</td>
         <td>{{v.botonPanicoId}}</td>
       </tr>
     </tbody>
   </table>
+
+</body>
