--- a/src/app/modulos/parametros/parada/editar-parada/editar-parada.component.html
+++ b/src/app/modulos/parametros/parada/editar-parada/editar-parada.component.html
@@ -7,7 +7,7 @@
                     <div class="input-field col s4">
                         <input type="hidden" formControlName="id">
                         <input formControlName="nombreParada" class="validate" id="nombreParada" type="text">
-                        <label for="nombreParada" data-error="wrong" class="active" data-succes="right">Npmbre de parada</label>
+                        <label for="nombreParada" data-error="wrong" class="active" data-succes="right">Nombre de parada</label>
                         <div class="show-errors" *ngIf="obtenerDatos['nombreParada'].errors 
                         && (obtenerDatos['nombreParada'].dirty || obtenerDatos['nombreParada'].touched)">
                             <strong>Este campo es obligatorio</strong>
