--- a/src/app/modulos/parametros/bloqueo-cliente/listar-bloqueo-cliente/listar-bloqueo-cliente.component.html
+++ b/src/app/modulos/parametros/bloqueo-cliente/listar-bloqueo-cliente/listar-bloqueo-cliente.component.html
@@ -1,28 +1,29 @@
-<br />
-<a routerLink="/parametros/bloqueo-cliente-crear" class="btn">Agregar bloqueo de Cliente</a>
-<br /> 
+<body class="container p-5">
+  <br />
+  <a routerLink="/parametros/bloqueo-cliente-crear" class="btn">Agregar bloqueo de Cliente</a>
+  <br />
 
-<!-- Tabla de Materialize -->
-<table class="responsive-table">
+  <!-- Tabla de Materialize -->
+  <table class="responsive-table">
     <thead>
       <tr>
-        <th></th>
         <th>Nombre de Cliente</th>
         <th>Comentario</th>
         <th>Fecha</th>
+        <th>Acciones</th>
       </tr>
     </thead>
 
     <tbody>
       <tr *ngFor="let bc of listaBloqueoCliente">
-        <td>{{bc.clienteId}}</td>
+        <td>{{bc.cliente?.primerNombre}} {{bc.cliente?.primerApellido}}</td>
         <td>{{bc.comentario}}</td>
         <td>{{bc.fecha}}</td>
         <td>
-            <a routerLink="/parametros/bloqueo-cliente-editar/{{bc.id}}" class="btn orange">Editar un bloqueo de un cliente</a>
-            &nbsp;
-            <a routerLink="/parametros/bloqueo-cliente-eliminar/{{bc.id}}" class="btn red">Eliminar bloqueo de un cliente</a>
+          <a routerLink="/parametros/bloqueo-cliente-editar/{{bc.id}}" class="btn orange">Editar</a>
+          <a routerLink="/parametros/bloqueo-cliente-eliminar/{{bc.id}}" class="btn red">Eliminar</a>
         </td>
       </tr>
     </tbody>
   </table>
+</body>
